--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: budget
-    databaseName: budget_afdj
-    user: budget_afdj_user
+  - name: mysite
+    databaseName: mysite
+    user: mysite
 
 services:
   - type: web
-    name: budget-buddy
+    name: mysite
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: budget_afdj
+          name: mysite
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
